--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
+    "react-textarea-autosize": "^7.1.2",
     "redux": "^4.0.5"
   },
   "scripts": {
