--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "react-textarea-autosize": "^7.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
